# SWE

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  build.bat
.github/workflows/: build.yml
include/swe/: ci_map.hpp  concurrent_static_event.hpp  static_event.hpp  string.hpp  swe.hpp
src/: string.cpp  swe.cpp
tests/: ci_map_test.cpp  concurrent_static_event_test.cpp  static_event_test.cpp  string_test.cpp
